--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
 		}
 		e.type = "application/javascript";
-		e.src = "magpi.js";
+		e.src = "index.js";
 		e.id = "e_script";
 		
 		document.body.appendChild(e); // load and run
